[package]
name = "devbox-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sycamore = { version = "0.9", features = ["suspense"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }
console_error_panic_hook = "0.1.7"
base64 = "0.22"
sycamore-router = "0.9"
urlencoding = "2.1.3"

[workspace]
members = ["src-tauri"]


[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true
